--- a/index.html
+++ b/index.html
@@ -21,76 +21,77 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-</div>
+</container>
+
 
   
   <div class="container">
-    <div id="hr9" class="row">
-      <div class="hour col-1">
+    <div id="hr9" class="row time-block">
+      <div class="col-md-1 hour">
         9AM
       </div>
       <input class="col-8 description">
       <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
     </div>
 
-    <div id="hr10" class="row">
-      <div class="hour col-1">
+    <div id="hr10" class="row time-block">
+      <div class="col-1 hour">
         10AM
       </div>
       <input class="col-8 description">
       <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
     </div>
 
-    <div id="hr11" class="row">
-      <div class="hour col-1">
+    <div id="hr11" class="row time-block">
+      <div class="col-1 hour">
         11AM
       </div>
       <input class="col-8 description">
       <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
     </div>
 
-    <div id="hr12" class="row">
-      <div class="hour col-1">
+    <div id="hr12" class="row time-block">
+      <div class="col-1 hour">
         12PM
       </div>
       <input class="col-8 description">
       <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
     </div>
 
-    <div id="hr13" class="row">
-      <div class="hour col-1">
+    <div id="hr13" class="row time-block">
+      <div class="col-1 hour">
         1PM
       </div>
       <input class="col-8 description">
       <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
     </div>
 
-    <div id="hr14" class="row">
-      <div class="hour col-1">
+    <div id="hr14" class="row time-block">
+      <div class="col-1 hour">
         2PM
       </div>
       <input class="col-8 description">
       <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
     </div>
 
-    <div id="hr15" class="row">
-      <div class="hour col-1">
+    <div id="hr15" class="row time-block">
+      <div class="col-1 hour">
         3PM
       </div>
       <input class="col-8 description">
       <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
     </div>
 
-    <div id="hr16" class="row">
-      <div class="hour col-1">
+    <div id="hr16" class="row time-block">
+      <div class="col-1 hour">
         4PM
       </div>
       <input class="col-8 description">
       <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
     </div>
 
-    <div id="hr17" class="row">
-      <div class="hour col-1">
+    <div id="hr17" class="row time-block">
+      <div class="col-1 hour">
         5PM
       </div>
       <input class="col-8 description">
