--- a/index.html
+++ b/index.html
@@ -16,95 +16,85 @@
 <body>
 
   <div class="container">
-  <header class="jumbotron">
-    <h1 class="display-3">Work Day Scheduler</h1>
-    <p class="lead">A simple calendar app for scheduling your work day</p>
-    <p id="currentDay" class="lead"></p>
-  </header>
-</container>
+    <header class="jumbotron">
+      <h1 class="display-3">Work Day Scheduler</h1>
+      <p class="lead">A simple calendar app for scheduling your work day</p>
+      <p id="currentDay" class="lead"></p>
+    </header>
+    </container>
 
 
-  
-  <div class="container">
-    <div id="hr9" class="row time-block">
-      <div class="col-md-1 hour">
-        9AM
+
+    <div class="container">
+      <div id="hr9" class="row time-block">
+      <div class="col-md-1 hour">9am</div>
+        <textarea class="col-md-10 description" type="task"></textarea>
+        <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
       </div>
-      <input class="col-8 description">
-      <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
-    </div>
 
-    <div id="hr10" class="row time-block">
-      <div class="col-1 hour">
-        10AM
-      </div>
-      <input class="col-8 description">
-      <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
-    </div>
 
-    <div id="hr11" class="row time-block">
-      <div class="col-1 hour">
-        11AM
+      <div id="hr10" class="row time-block">
+        <div class="col-md-1 hour">10am</div>
+        <textarea class="col-md-10 description" type="task"></textarea>
+        <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
       </div>
-      <input class="col-8 description">
-      <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
-    </div>
 
-    <div id="hr12" class="row time-block">
-      <div class="col-1 hour">
-        12PM
-      </div>
-      <input class="col-8 description">
-      <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
-    </div>
 
-    <div id="hr13" class="row time-block">
-      <div class="col-1 hour">
-        1PM
+      <div id="hr11" class="row time-block">
+        <div class="col-md-1 hour">11am</div>
+        <textarea class="col-md-10 description" type="task"></textarea>
+        <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
       </div>
-      <input class="col-8 description">
-      <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
-    </div>
 
-    <div id="hr14" class="row time-block">
-      <div class="col-1 hour">
-        2PM
+      <div id="hr12" class="row time-block">
+        <div class="col-md-1 hour">12pm</div>
+        <textarea class="col-md-10 description" type="task"></textarea>
+        <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
       </div>
-      <input class="col-8 description">
-      <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
-    </div>
 
-    <div id="hr15" class="row time-block">
-      <div class="col-1 hour">
-        3PM
+      <div id="hr13" class="row time-block">
+        <div class="col-md-1 hour">1pm</div>
+        <textarea class="col-md-10 description" type="task"></textarea>
+        <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
       </div>
-      <input class="col-8 description">
-      <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
-    </div>
 
-    <div id="hr16" class="row time-block">
-      <div class="col-1 hour">
-        4PM
-      </div>
-      <input class="col-8 description">
-      <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
-    </div>
 
-    <div id="hr17" class="row time-block">
-      <div class="col-1 hour">
-        5PM
+
+      <div id="hr14" class="row time-block">
+        <div class="col-md-1 hour">2pm</div>
+        <textarea class="col-md-10 description" type="task"></textarea>
+        <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
       </div>
-      <input class="col-8 description">
-      <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
+
+      <div id="hr15" class="row time-block">
+        <div class="col-md-1 hour">3pm</div>
+        <textarea class="col-md-10 description" type="task"></textarea>
+        <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
+      </div>
+
+
+      <div id="hr16" class="row time-block">
+        <div class="col-md-1  hour">4pm</div>
+        <textarea class="col-md-10 description" type="task"></textarea>
+        <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
+      </div>
+
+      <div id="hr17" class="row time-block">
+        <div class="col-md-1 hour">5pm</div>
+        <textarea class="col-md-10 description" type="task"></textarea>
+        <button class="saveBtn col-1"><i class="fa fa-save"></i></button>
+      </div>
+
 
 
     </div>
   </div>
-  
+
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="script.js"></script>
 
 </body>
+
 </html>
